Prevent layout jump when switching to scrolling page
This is a nicer solution than `html: {overflow-y: scroll;}` that I always used to use.  See https://aykevl.nl/2014/09/fix-jumping-scrollbar.

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -19,3 +19,10 @@ main {
 main * {
   max-inline-size: 100%;
 }
+
+@media screen and (min-width: 640px) {
+  html {
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
+  }
+}
